--- a/package.json
+++ b/package.json
@@ -11,9 +11,9 @@
   "license": "ISC",
   "dependencies": {
     "@hapi/joi": "^17.1.1",
+    "dotenv": "^16.0.0",
     "express": "^4.17.3",
     "sequelize": "^6.17.0",
-    "sequelize-joi": "^2.0.1",
     "sqlite3": "^5.0.2",
     "uuid": "^8.3.2"
   },
