--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "description": "\"projeto módulo 4\"",
   "main": "index.js",
   "scripts": {
-    "pretest": "node ./src/database/testDatabaseConnection.js",
+    "pretest": "cross-env NODE_ENV=test node ./src/database/testDatabaseConnection.js",
     "dev": "node ./src/server.js",
-    "test": "node --experimental-vm-modules node_modules/jest/bin/jest"
+    "test": "cross-env NODE_ENV=test node --experimental-vm-modules node_modules/jest/bin/jest"
   },
   "author": "\"carolly\"",
   "license": "ISC",
