--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "uuid": "^8.3.2"
   },
   "devDependencies": {
+    "cross-env": "^7.0.3",
     "jest": "^27.5.1",
     "supertest": "^6.2.2"
   }
