--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "\"projeto módulo 4\"",
   "main": "index.js",
   "scripts": {
-    "start": "node server.js",
+    "start": "node .server.js",
     "dev": "node ./src/server.js",
     "test": "cross-env NODE_ENV=test node --experimental-vm-modules node_modules/jest/bin/jest"
   },
